--- a/index.html
+++ b/index.html
@@ -89,5 +89,23 @@
       ">
       Scissor
     </button>
-  </body>
+
+    <h1>Head or Tail</h1>
+
+    <button onclick="
+    const random=Math.random();
+    if (random>=0 && random <0.5){
+      alert(`You Win`);
+    }else if(random>=0.5 && random <1){
+      alert(`You Loose`);
+    }">Head</button>
+
+
+    <button onclick="
+    const random=Math.random();
+    if (random>=0 && random <0.5){
+      alert(`You Win`);
+    }else if(random>=0.5 && random <1){
+      alert(`You Loose`);
+    }">Tail</button>
 </html>
