Used object for show scores

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
 
     <button onclick="playgame('Scissor');">Scissor</button>
 
+    <button onclick="resetrpsScore();">Reset</button>
+
 
     <h1>Head or Tail</h1>
 
     <button onclick="headOrTail();">Head</button>
 
     <button onclick="headOrTail();">Tail</button>
+
+    <button onclick="resethtScore();">Reset</button>
+
 
     
 </html>
