--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <button onclick="headOrTail();">Tail</button>
 
-    <button onclick="resethtScore();">Reset</button>
+    <button onclick="resethtscore();">Reset</button>
 
 
     
